--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "parcel build index.html --public-url ./"
   },
   "keywords": [],
-  "author": "",
+  "author": "Morningcore<caichen.wh@foxmail.com>",
   "license": "MIT",
   "devDependencies": {
     "less": "^3.0.1",
