最新基于issue的版本，未完成

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "varharrie-blog",
+  "name": "morningcore-blog",
   "private": true,
   "version": "0.0.0",
   "babelMacros": {
@@ -12,8 +12,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "homepage": "https://github.com/varHarrie/varharrie.github.io#readme",
-  "author": "varharrie <varharrie@gmail.com>",
+  "homepage": "https://github.com/morningcore/morningcore.github.io#readme",
+  "author": "morningcore <1055820594@qq.com>",
   "license": "MIT",
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.0.26",
